[gd_scene load_steps=2 format=3 uid="uid://djq6t65px5cdt"]

[ext_resource type="Script" path="res://tools/FSM maker/graph_node.gd" id="1_vmkr2"]

[node name="GraphNode" type="GraphNode"]
custom_minimum_size = Vector2(200, 100)
offset_right = 320.0
offset_bottom = 128.0
resizable = true
title = "State"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(0, 0.831373, 0.145098, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 1
slot/0/right_color = Color(0.105882, 0.345098, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = true
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = true
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = true
slot/4/right_type = 0
slot/4/right_color = Color(1, 1, 1, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
slot/5/left_enabled = false
slot/5/left_type = 0
slot/5/left_color = Color(1, 1, 1, 1)
slot/5/left_icon = null
slot/5/right_enabled = true
slot/5/right_type = 0
slot/5/right_color = Color(1, 1, 1, 1)
slot/5/right_icon = null
slot/5/draw_stylebox = true
slot/6/left_enabled = false
slot/6/left_type = 0
slot/6/left_color = Color(1, 1, 1, 1)
slot/6/left_icon = null
slot/6/right_enabled = true
slot/6/right_type = 0
slot/6/right_color = Color(1, 1, 1, 1)
slot/6/right_icon = null
slot/6/draw_stylebox = true
script = ExtResource("1_vmkr2")

[node name="MainSettings" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MainSettings"]
layout_mode = 2

[node name="state_name" type="LineEdit" parent="MainSettings/HBoxContainer2"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
placeholder_text = "state name"
alignment = 1

[node name="free" type="Button" parent="MainSettings/HBoxContainer2"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "Delete state"

[node name="HSeparator2" type="HSeparator" parent="MainSettings"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Effects" type="Label" parent="MainSettings"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Edit Effects"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MainSettings"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="MainSettings/HBoxContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "Wait Count"
vertical_alignment = 1

[node name="WaitCount" type="SpinBox" parent="MainSettings/HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
min_value = 1.0
value = 1.0
alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainSettings"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Recursive" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Recursive"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Self"
horizontal_alignment = 1
vertical_alignment = 1

[node name="value" type="Label" parent="Recursive"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "100%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Weight1" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="state_name" type="Label" parent="Weight1"]
custom_minimum_size = Vector2(250, 40)
layout_mode = 2
text = "stateName"
horizontal_alignment = 1
vertical_alignment = 1

[node name="value" type="SpinBox" parent="Weight1"]
layout_mode = 2
alignment = 1
suffix = "%"

[node name="Weight2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="state_name" type="Label" parent="Weight2"]
custom_minimum_size = Vector2(250, 40)
layout_mode = 2
text = "stateName"
horizontal_alignment = 1
vertical_alignment = 1

[node name="value" type="SpinBox" parent="Weight2"]
layout_mode = 2
alignment = 1
suffix = "%"

[node name="Weight3" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="state_name" type="Label" parent="Weight3"]
custom_minimum_size = Vector2(250, 40)
layout_mode = 2
text = "stateName"
horizontal_alignment = 1
vertical_alignment = 1

[node name="value" type="SpinBox" parent="Weight3"]
layout_mode = 2
alignment = 1
suffix = "%"

[node name="Weight4" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="state_name" type="Label" parent="Weight4"]
custom_minimum_size = Vector2(250, 40)
layout_mode = 2
text = "stateName"
horizontal_alignment = 1
vertical_alignment = 1

[node name="value" type="SpinBox" parent="Weight4"]
layout_mode = 2
alignment = 1
suffix = "%"

[node name="Weight5" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="state_name" type="Label" parent="Weight5"]
custom_minimum_size = Vector2(250, 40)
layout_mode = 2
text = "stateName"
horizontal_alignment = 1
vertical_alignment = 1

[node name="value" type="SpinBox" parent="Weight5"]
layout_mode = 2
alignment = 1
suffix = "%"

[connection signal="delete_request" from="." to="." method="_on_delete_request"]
[connection signal="text_changed" from="MainSettings/HBoxContainer2/state_name" to="." method="_on_state_name_text_changed"]
[connection signal="pressed" from="MainSettings/HBoxContainer2/free" to="." method="_on_delete_request"]
[connection signal="value_changed" from="MainSettings/HBoxContainer/WaitCount" to="." method="_on_wait_count_value_changed"]
[connection signal="value_changed" from="Weight1/value" to="." method="_on_weight_box_value_changed" binds= [0]]
[connection signal="value_changed" from="Weight2/value" to="." method="_on_weight_box_value_changed" binds= [1]]
[connection signal="value_changed" from="Weight3/value" to="." method="_on_weight_box_value_changed" binds= [2]]
[connection signal="value_changed" from="Weight4/value" to="." method="_on_weight_box_value_changed" binds= [3]]
[connection signal="value_changed" from="Weight5/value" to="." method="_on_weight_box_value_changed" binds= [4]]
